@@ -21,6 +21,7 @@
 #define WORD_LIST_H
 
 #include <QHash>
+#include <QSharedPointer>
 #include <QStringList>
 #include <QObject>
 
@@ -31,7 +32,7 @@ public:
 	WordList(QObject* parent = 0);
 
 	bool isEmpty() const {
-		return m_all_words.isEmpty();
+		return m_data->isEmpty();
 	}
 
 	QString language() const {
@@ -39,18 +40,18 @@ public:
 	}
 
 	int maximumLength() const {
-		return m_maximum_length;
+		return m_data->maximumLength();
 	}
 
 	QStringList filter(const QString& known_letters) const;
 
 	QStringList spellings(const QString& word) const {
-		return m_spellings.value(word, QStringList(word.toLower()));
+		return m_data->spellings(word);
 	}
 
 	void addAnagramFilter(const QString& word);
 	void resetAnagramFilters();
-	bool setLanguage(const QString& langcode);
+	void setLanguage(const QString& langcode);
 	void setLength(int length);
 
 	static QString defaultLanguage();
@@ -62,12 +63,37 @@ private:
 	void resetWords();
 
 private:
+	class WordListData {
+	public:
+		explicit WordListData(const QString& language = QString());
+
+		bool isEmpty() const {
+			return m_all_words.isEmpty();
+		}
+
+		int maximumLength() const {
+			return m_maximum_length;
+		}
+
+		QStringList spellings(const QString& word) const {
+			return m_spellings.value(word, QStringList(word.toLower()));
+		}
+
+		QStringList words(int length) const {
+			return m_all_words.value(length);
+		}
+
+	private:
+		QHash<int, QStringList> m_all_words;
+		QHash<QString, QStringList> m_spellings;
+		int m_maximum_length;
+	};
+
+private:
 	QString m_langcode;
-	QHash<int, QStringList> m_all_words;
-	QHash<QString, QStringList> m_spellings;
+	QSharedPointer<WordListData> m_data;
 	QStringList m_words;
 	QStringList m_anagram_filters;
-	int m_maximum_length;
 	int m_length;
 };
 
